--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,10 @@
             "Cawa\\Oauth\\": "src"
         }
     },
-
     "require": {
         "php": "~7.0",
         "cawaphp/cawa" : "dev-master",
         "cawaphp/httpclient" : "dev-master",
-        "lusitanian/oauth": "dev-master"
+        "lusitanian/oauth": "^0.8.10"
     }
 }
